--- a/resources/css/filament/wplanner/theme.css
+++ b/resources/css/filament/wplanner/theme.css
@@ -1,3 +1,9 @@
 @import '/vendor/filament/filament/resources/css/theme.css';
 
 @config 'tailwind.config.js';
+
+
+.-mb-4 {
+    margin-bottom: 0;
+    /* Add spacing below each group header */
+}
